--- a/project for class.html
+++ b/project for class.html
@@ -9,8 +9,9 @@
     <p>My first paragraph.</p>
     <p>My second paragraph.</p>
     <p>My third paragraph.</p>
-    <p>My fourth paragraph.</p>
+    <p> batman.</p>
     <p>My fifth paragraph.</p>
+    <p>My sixth paragraph.</p>
     <p>My sixth paragraph.</p>
     <p>My seventh paragraph.</p>
  </body>
