--- a/project for class.html
+++ b/project for class.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+div {
+  width:300px;
+  margin:auto;
+}
+</style>
     <meta charset="UTF-8" />
     <title>title</title>
 </head>
