--- a/project for class.html
+++ b/project for class.html
@@ -12,9 +12,10 @@ div {
     <title>title</title>
 </head>
 <body> 
-    
-    <h1>My First Heading</h1>
+    <div>
+     My First Heading</h1>
     <p>My first paragraph.</p>
+    </div>
     <p>My second paragraph.</p>
     <p>My third paragraph.</p>
     <p> batman.</p>
