--- a/project for class.html
+++ b/project for class.html
@@ -2,26 +2,98 @@
 <html>
 <head>
     <style>
-div {
-  width:300px;
-  margin:auto;
+p.one {
+  border-style: solid;
+  border-width: 5px;
+
+    border-color: rgb(56, 164, 164);
+
+}
+
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+{
+  background-image: url(img_flwr.gif), url(paper.gif);
+  background-position: right bottom, left top;
+  background-repeat: no-repeat, repeat;
+  padding: 15px;
+}
+   
+.div1 {
+  width: 300px;
+  height: 100px;
+  border: 1px solid blue;
+}
+
+.div2 {
+  width: 300px;
+  height: 100px;  
+  padding: 50px;
+  border: 1px solid red;
 }
 
 </style>
     <meta charset="UTF-8" />
     <title>title</title>
 </head>
-<body> 
+<body>
+   
+<h1>Multiple Backgrounds</h1>
+<p>The following div element has two background images:</p>
+
+<div id="example1">
+  <h1>Lorem Ipsum Dolor</h1>
+  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+  <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+</div>
+
+
+<h1>Without box-sizing</h1>
+
+<div class="div1">This div is smaller (width is 300px and height is 100px).</div>
+<br>
+<div class="div2">This div is bigger (width is also 300px and height is 100px).</div>
+
+    <form>
+  <label for="fname">First Name</label>
+  <input type="text" id="fname" name="fname">
+  <label for="lname">Last Name</label>
+  <input type="text" id="lname" name="lname">
+</form>
+
+    <table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+   
+  
     <div>
-     My First Heading</h1>
-    <p>My first paragraph.</p>
+    <h1> washing machine</h1>
+    <p>app</p>
     </div>
     <p>My second paragraph.</p>
-    <p>My third paragraph.</p>
-    <p> batman.</p>
-    <p>My fifth paragraph.</p>
-    <p>My sixth paragraph.</p>
-    <p>My sixth paragraph.</p>
-    <p>My seventh paragraph.</p>
+
+
+
+
  </body>
 </html>
